--- a/src/pages/discipulados.astro
+++ b/src/pages/discipulados.astro
@@ -36,11 +36,13 @@
         <!-- Header -->
         <header class="flex items-center justify-between gap-6 mb-12">
           <div class="flex items-center gap-3">
-            <img
-              src="images/edificadoresonline_logo.webp"
-              alt="Edificadores Online Logo"
-              class="h-10 w-auto"
-            />
+            <a href="/">
+              <img
+                src="images/edificadoresonline_logo.webp"
+                alt="Edificadores Online Logo"
+                class="h-10 w-auto"
+              />
+            </a>
           </div>
           <nav
             class="hidden items-center gap-6 text-sm font-semibold text-[#3f3f3f] md:flex"
@@ -172,7 +174,7 @@
               </div> -->
 
               <!-- Marzo -->
-             <!--  <div class="space-y-4">
+              <!--  <div class="space-y-4">
                 <div
                   class="relative overflow-hidden rounded-2xl h-48 bg-gradient-to-br from-purple-700 to-pink-600 flex items-center justify-center"
                 >
@@ -195,7 +197,7 @@
               </div> -->
 
               <!-- Abril -->
-             <!--  <div class="space-y-4">
+              <!--  <div class="space-y-4">
                 <div
                   class="relative overflow-hidden rounded-2xl h-48 bg-gradient-to-br from-cyan-500 to-blue-400 flex items-center justify-center"
                 >
@@ -269,7 +271,7 @@
               </div> -->
 
               <!-- Julio -->
-             <!--  <div class="space-y-4">
+              <!--  <div class="space-y-4">
                 <div
                   class="relative overflow-hidden rounded-2xl h-48 bg-gradient-to-br from-teal-500 to-emerald-400 flex items-center justify-center"
                 >
