--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -156,8 +156,8 @@
         </section>
 
         <section class="mt-16 space-y-6">
-          <div class="grid gap-6 lg:grid-cols-[1.4fr_0.6fr] h-64">
-            <div class="relative overflow-hidden rounded-[32px]">
+          <div class="grid gap-6 lg:grid-cols-[1.4fr_0.6fr]">
+            <div class="relative overflow-hidden rounded-[32px] h-64">
               <img
                 class="h-full w-full object-cover"
                 src="images/edificadoresonline_6.webp"
@@ -190,7 +190,9 @@
             </div>
           </div>
 
-          <div class="grid gap-6 lg:grid-cols-[0.7fr_1.3fr] h-64">
+          <div
+            class="flex flex-col-reverse gap-6 lg:grid lg:grid-cols-[0.7fr_1.3fr] h-auto lg:h-64"
+          >
             <div
               class="flex h-full flex-col justify-between rounded-[28px] bg-[#5b6a4b] p-6 text-[#f4efe6]"
             >
@@ -208,7 +210,7 @@
                 >
               </button>
             </div>
-            <div class="relative overflow-hidden rounded-[32px]">
+            <div class="relative overflow-hidden rounded-[32px] h-64">
               <img
                 class="h-full w-full object-cover"
                 src="images/edificadoresonline_20.webp"
@@ -223,8 +225,8 @@
             </div>
           </div>
 
-          <div class="grid gap-6 lg:grid-cols-[1.4fr_0.6fr] h-64">
-            <div class="relative overflow-hidden rounded-[32px]">
+          <div class="grid gap-6 lg:grid-cols-[1.4fr_0.6fr]">
+            <div class="relative overflow-hidden rounded-[32px] h-64">
               <img
                 class="h-full w-full object-cover"
                 src="images/edificadoresonline_13.webp"
