--- a/src/pages/discipulados/2026/enero.astro
+++ b/src/pages/discipulados/2026/enero.astro
@@ -134,6 +134,18 @@
                   >→</span
                 >
               </a>
+              <a
+                href="https://pub-44f34ebdb92a49c3b40a76dc6f94bf2e.r2.dev/discipulado/2026/PPT%20TEMA%201%20REFUGIO%20ENERO.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="flex items-center gap-2 rounded-full bg-[#1c1c1c] px-6 py-3 text-sm font-semibold text-[#f7f1e7] transition hover:bg-[#0f0f0f] w-fit"
+              >
+                Descargar Presentación
+                <span
+                  class="grid h-5 w-5 place-items-center rounded-full border border-[#f7f1e7]"
+                  >→</span
+                >
+              </a>
             </div>
 
             <!-- Right Side - Video -->
