--- a/src/pages/discipulados/2026/febrero.astro
+++ b/src/pages/discipulados/2026/febrero.astro
@@ -129,8 +129,8 @@
                   >→</span
                 >
               </a>
-              <!-- <a
-                href="https://pub-44f34ebdb92a49c3b40a76dc6f94bf2e.r2.dev/discipulado/2026/PPT%20TEMA%201%20REFUGIO%20ENERO.pdf"
+              <a
+                href="https://pub-44f34ebdb92a49c3b40a76dc6f94bf2e.r2.dev/discipulado/2026/febrero/PPT%20TEMA%202%20REFUGIO%20FEBRERO%20(1).pdf"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="flex items-center gap-2 rounded-full bg-[#1c1c1c] px-6 py-3 text-sm font-semibold text-[#f7f1e7] transition hover:bg-[#0f0f0f] w-fit"
@@ -140,7 +140,7 @@
                   class="grid h-5 w-5 place-items-center rounded-full border border-[#f7f1e7]"
                   >→</span
                 >
-              </a> -->
+              </a>
             </div>
 
             <!-- Right Side - Video -->
